--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -107,21 +107,17 @@
                     android:id="@+id/social_buttons_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/header_container"
+                    android:layout_below="@id/divider_header_toolbar"
                     app:cardCornerRadius="0dp"
                     app:contentPadding="@dimen/card_negative_padding"
                     app:elevation="2dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/colorPrimaryVeryLight">
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:baselineAligned="false"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:background="@color/colorPrimaryVeryLight">
 
                             <LinearLayout
                                 android:id="@+id/likes_container"
@@ -240,15 +236,15 @@
                             </LinearLayout>
 
                         </LinearLayout>
-                    </LinearLayout>
 
                 </android.support.v7.widget.CardView>
 
                 <View
+                    android:id="@+id/divider_header_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_below="@id/header_container"
-                    android:background="#46ffffff" />
+                    android:background="#86dea0" />
 
                 <TextView
                     android:id="@+id/title"
