--- a/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
@@ -99,21 +99,27 @@
         android:layout_alignTop="@+id/contentImage"
         android:foregroundGravity="center">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/cameraButton"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="@dimen/width_60"
             android:layout_height="@dimen/width_60"
             android:background="@drawable/black_circle"
+            android:foreground="?selectableItemBackgroundBorderless"
+            android:scaleType="fitCenter"
             android:src="@drawable/camera_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/progressBar"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/galleryButton"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="@dimen/width_60"
             android:layout_height="@dimen/width_60"
             android:background="@drawable/black_circle"
+            android:foreground="?selectableItemBackgroundBorderless"
+            android:scaleType="fitCenter"
             android:src="@drawable/chat_button_image"
             android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
