--- a/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
@@ -221,7 +221,7 @@
                         android:textColor="#4d4e4c"
                         tools:textStyle="bold" />
 
-                    <TextView
+                    <android.support.v7.widget.AppCompatTextView
                         android:id="@+id/tutorialBody"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
