--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -60,20 +60,26 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
+            <TextSwitcher
+                android:layout_width="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="@dimen/half_margin"
+                android:layout_toEndOf="@+id/logo"
+                android:paddingBottom="@dimen/half_margin"
+                android:paddingRight="8dp"
+                android:layout_toStartOf="@+id/notification_open"
+                android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/scrolling_news_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="@dimen/half_margin"
-                android:layout_toEndOf="@+id/logo"
-                android:layout_toStartOf="@+id/notification_open"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:paddingBottom="@dimen/half_margin"
-                android:paddingRight="8dp"
                 android:textColor="?phoneLoungeTickerColor"
                 android:textSize="@dimen/font_size_10" />
+
+            </TextSwitcher>
 
             <ImageView
                 android:id="@+id/notification_open"
