--- a/SportsSideKick/app/src/main/res/layout/popup_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login_sing_up.xml
@@ -49,12 +49,12 @@
         android:background="@color/colorPrimaryVeryLight">
 
         <ImageView
+            android:id="@+id/backgroundImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:alpha="0.9"
             android:scaleType="centerCrop"
-            android:src="@drawable/video_chat_background" />
-
+            tools:src="@drawable/video_chat_background" />
 
         <ImageView
             android:layout_width="match_parent"
