--- a/SportsSideKick/app/src/main/res/layout/popup_right_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_right_login_sing_up.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="@dimen/margin_8">
 
     <ImageView
@@ -16,7 +17,7 @@
         android:layout_height="match_parent"
         android:alpha="0.4"
         android:scaleType="centerCrop"
-        android:src="@drawable/video_chat_background" />
+        tools:src="@drawable/video_chat_background" />
 
     <ScrollView
         android:layout_width="match_parent"
