--- a/SportsSideKick/app/src/main/res/layout/popup_video_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_video_login_sing_up.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="@dimen/margin_8"
     android:layout_height="match_parent">
 
@@ -16,7 +17,7 @@
         android:layout_height="match_parent"
         android:alpha="0.4"
         android:scaleType="centerCrop"
-        android:src="@drawable/video_chat_background" />
+        tools:src="@drawable/video_chat_background" />
 
     <RelativeLayout
         android:layout_width="match_parent"
