--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,8 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="@dimen/half_margin"
                 android:layout_toEndOf="@+id/logo"
+                android:animateLayoutChanges="true"
+                android:measureAllChildren="false"
                 android:layout_toStartOf="@+id/notification_open"
                 android:paddingBottom="@dimen/half_margin"
                 android:paddingRight="8dp">
@@ -263,7 +265,7 @@
                 android:layout_alignParentTop="true"
                 android:background="@color/white"
                 android:onClick="onProfileClicked"
-                app:layout_heightPercent="15.5%">
+                app:layout_heightPercent="17.5%">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -277,7 +279,7 @@
                     android:text="@string/go_to_profile"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryVeryLight"
-                    android:textSize="@dimen/font_size_8" />
+                    android:textSize="12sp" />
 
                 <RelativeLayout
                     android:id="@+id/profile_info_holder"
